--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,14 @@
 @use "./styles/mixins" as *;
   /* Navigation Links */
+  *{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+  }
+  html,body{
+    overflow-x: hidden;
+    width: 100%;
+  }
   ul {
     display: flex;
     align-items: center;
